Mail paneli düzenlendi.

--- a/Ticari_Otomasyon/FrmMail.resx
+++ b/Ticari_Otomasyon/FrmMail.resx
@@ -117,4 +117,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="simpleButton1.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAALdEVYdFRpdGxlAFNlbmQ7faSt1wAABg1JREFUWEfNl/lPVFccxV9rrbt2+Q+aptPNtKlR00ai
+        NcaNqFiT9gcjnRiJIAyMyA7DJvsAggiy+ioIDiC7IrKIymqpStNoCS4oyiLLDLMvjJzm3vfmDYIabRPs
+        JJ+c77tD5ny/Zy7v3WEAMG+TWQtzzayFuWbWwlxjL2a/3pkDXtiA7c15PO+9AfNfE/K371IfeU6zSJ59
+        RZyQ1czGZzX3kDcyFZ2OwWyntqi6G0VVf6KwqhtnqrpRUHEL+eWEmzhddhO/nSPcwKnSG8gr7UJeSRdy
+        i7uQo/gd2YrryCq6jszCTpws7ETGmQ5kFHQgvaAd8blX/4rLqN1EB4zPamYSMpuZ+Mxm2/TzArJbLdLM
+        VkwBHFNvyhSeTU1RfRH9D4dxJiRRTdOIz7wsijvZJI492cTGZjSRBOZ7pLcgiO2EyWyFyWSF0WyFkajJ
+        CoNpEgaq0zBOctDaCr1xkmKZfIbBpDAMyGUYiA/Gk9ggmC3P0BvkiVt7fiTf+wImNqORiUnn4BOY75l2
+        FUPjBt5gkjfmzY02nYSeN6Q1wcDD18TscUwgHkf5oz/CF49CfWC2WPGH0wa0/+xIGljIxJxoFEWfaBBH
+        pzWwUWn1JIH35bnXYDUahGkEA9t0vImONyRK0FK18NcW2sAjmTf6gqXoC/DCAz8JXbu5bwdSEhSkgUVM
+        VFo9E3X8EhN5/BJJgOzMBalZjXgYGwCd0QodMaJmFl7t18SQmuo51erJmgVacq0nDVhx38cD973dcE96
+        EHc9XWCyWKHp60PU8XrSwGImMrVOFJlSJw5PqWPDUy6SBBa0erjizq87pk1jMyDKmxgs0OgnoSGmelLb
+        Uess0Ogs1KzX4wB63faj56AYf7s4032l0ZvhHlXNNRCeUseEJ19kwpJrbQksvL3PET3ue4Vppn/4LHQW
+        qAU1Q60jWDChM3ObmGzgGUiT67FZUkQaWMKEJtWKQpNqxbKkWjYk8QJJYFGX8x4YnvQLBnQqfjI7NjMz
+        NRPQPo+KoOFVa6L1JrdCbOUaWMrIEs8zIfLzTEjCeVsCi5Jjz9LIbWap+Z1Ize9AyukOXttpfex0O479
+        xpHMo9IQE86IqFLAjHFenXxK4BVZwTUQnFAjCoqvEQfF17CBcdUkgcWhSXUIzmkTphgY1WFwVIeBER2t
+        Bcj1iA5PKFoKNVLzhkR5SE0YU5vQ+0gJv+gq0sAyJjCumgmIraLw9/4le8NqsDu4WoiMTsmSSduQzLYj
+        iW1HMttGNelUGxIJeZxSIw1nNKY2YmzCyNUTBHJtgkalgfxACGlgOeMfUyXyi6kU+0VVsL5RFSSBJTv9
+        q+B89CKdgsRHJ3yqxeOX0E8Y5uCMbWZGjE6YMCrURoyqTLi27xfUrPyUNLCC8Y2uYHyPEsptCSzd5V+J
+        B4NqITZhylOtSMxrhZxMS5UntxUJua2Q57RiVMUZjdgMSa2yYaBUfvUJSlZ9wzXgc7RcdCSyXHwkooz1
+        jigjCSzzjKiEQa0VIpvgNyO303kl+2Parlfxtd3MbvpUZcRTJY/KgJp1q+EvTScNfMB4R5QxhyPOMYfD
+        z9kSWO4XqkC35IA9Nn4KQXmmG1ETm9n0WmnEMDU3YJhn8HYP3IOLSQMfMtLwUpE0rFQsDS1lPUNLSALL
+        K3buQsv6756LTZhGacCIkihvQmv7h1PGZ9TjeqpDSgN9yA2N6vCTG8s14BVawnjKCMXCHri67lu0bN+I
+        8d57NIVD8kasdzsLJ/9K9DxUQj2uRpeLMy5/vxIt2zdgpOcuRpR6uMY1wOFgEXb6lOP2gzGoRlXo3L8X
+        jau/xJUtDhi604OhMT2cPPLxuWMi918gkRWLJMHFYkmIgvUIUtBnQeH2HfmRAdnjPtFVcPQqhoPrWWw8
+        pIAkvByBESUo2+aIprVf44LDWoT550AaWYFtEgXWuRRig2sRDsnK4CtToGTzVjSs+gI1P6yBzCcbnmFl
+        2OJehM+2JWDNbnkBfRrOOBPazoIL6U2CbBIS0/N89Ao+fk1WUHPi9ZJDKbkl/5vD5utiP5S+oIH/+pp5
+        9H4V/6MfJm+LWQtzzayFueYfoqRJIzZQ3r8AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
