Gider listesi ve Tab Page resimleri eklendi.

--- a/Ticari_Otomasyon/FrmFirmalar.resx
+++ b/Ticari_Otomasyon/FrmFirmalar.resx
@@ -251,4 +251,123 @@
         jiV/CmBsjH3wS+vx+C8GC1sKMBlWFgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="xtraTabPage6.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAldEVYdFRpdGxlAEMjO0NTaGFycDtDb2RlO0xhbmd1YWdlO1Byb2dyYW3Y4UoGAAAHU0lEQVRY
+        R8WXe2xUxxXGp2kekBckJW2l1pRXiCO3aqW2KX9URGoiRVUDJFWSEmJsGgJYgcbGG4wA44CXBGOCvTaL
+        cexgr7FLHFJswkMkxhhjNk6BqgWqSlVSCti73sfdvfu6j9218Vedc+9dbErbRK3oSj/N3Nk753xzzpnZ
+        WQFA/D/5p4FbzdjPV24x4xzfJoT4qhDi9i/AHf8lZIP8ZUTcVlHf9UR1s/tcTUs/CEfLJ3C4+lHj+gQ1
+        rn44XPRsjFVT22w8Vze7Ud1stW5UN7lR1XQaVWa7o8ltcho79hhUNvaeK6858qS5YBZxu8Pl9g8MRTEK
+        fHlGvxxXPBFUNpzym9FgAXc4mt1sLJkegZYagZYcNlsT6lvP3De+V/l76g9z34LG1JugJIeRHr6GbQ29
+        VH13makQd1LISN31ly1jY5/HGNPHjFNfJ+Mj7ID7JkY/bWKMpdIj2Lr7JAmYYAm4a8e7fYYA3TBovfyv
+        SGTaNPczrTqM+Jg2Tq2aRlxPZ/rJ1AjeqjtBAiZaAiZsb+zDtdFRQ6lmEDehvl8Ooe3jSthqnsSS8mym
+        7aNKw7jJS2Wz8bue3Tjzl1NYtHE2/OEQj8fM72NKGnElDT01gi3ObhJwt1mIYsK2d3pZADtVUohZApQU
+        LnkvoaDiMeTbs1FQ/SgK63OwujEHBz99m6MVU1L4m+cSXix9GBf+fhqdfbuxePNsXmlUSTERsyWojjbX
+        HicB91gCJlbUn8TItVHzpXTmZcK+Jx95mx9BSdMc9F5s5xUQntAVDnskkUL/xV4W4JEu44OeOpTWP8NF
+        KsdTkBMpyPFkpiXRmxwfkYB7LQF3U06GR0aNl5gkTz7/+Z+wqHQ2VuzIRs/597joaMVhMhxPIpJIoqx+
+        MV5YOwsLS2dh6bZZeGHdTCwqm4k8+yyE40mEboDqpazq2DgB91BOaHsEojpC0SSkaBKhWBL7uuo4twVV
+        j0CKhTkiEhmKJSHFjLajpxX25lwU73wcHafqsLzyB3jTlYsDvbug6mkEY0kEZRV+WYcvrCCaSGHD20dJ
+        wH0ZAeW1XUilr8En6/DLGuOLaGg75kTupod5ZYo2DCmiIxjVWSi39BzRUeF6FW80voSEmsJzJTOwv3sX
+        iw3HNHglBd6QiaRxytZtO0wC7jePZXEv5YSKxidrGCLnIQ1DIQ0tR51YWDoTeW/O5KqmMQOFufj5Z3Ad
+        qsXSTXNRsHUu9n3sxPzXZmDn/hL0/fGE4fwGKHVrtx4iAZMsAfdtrDrGhXXdgcHJcyfwPOV00wwc7W/L
+        ODZWo6D7bDfmF07HguJpWGCbyswr/A4W2LLQerQWPlmFN6hg0EJSEI7pWPPWQRIw2RJwP+WEtseQRCEz
+        w2ayzD4Xz6+fjnz793Gsv5MN0vj5z/4Kj6Swk/mrs9B15iA6e1swr+hbiKkpJhjVTOcJZiCoIBTTYbN3
+        jBMwaV3lYd4eZJhUsnNT9fEz3cgt+x6eXTMVz9qmYn7hNDy9cjr2dNZylI7//jh+XjAN7gsn0XSwFs/Z
+        vsvOPQEVgwEVA2wzgUG/wgKojlaXHyABD1gCJq+tOMTbIxMqU/WAqfzTP5/FlndXYOH6HMwrysLTRVlo
+        6NiCYETDhz0deKpgKp90pc7lKN7+K0QTaV6Ah+wEDAYCCq4EEly0r73xAQl40PxFFJMpJ3RkksIBv4Kr
+        1AYTuEqq/UbohiQVoajO24jOAoKevZKKgKzzcUt9Oa4jEkthMKhyNMmxJ0A2DXsBWcOqjftJwNcsAQ/Y
+        7J28bYyXxnPZn2DlFEKKDBkkw+TAI1lQ2lR4Qyq31hhB79FiaB7Zoy3+6oZ2EjAlI6Co/ADvT3JGXPUl
+        cNkXN53HDTEBwwgXFDkwi5Gc8q6h4g0bAiw8ITWT0oGAEQESULB+3zgBk35T9r7v7IVB8xCiw4hOLuNA
+        YiIa506KalxEUtQ4sLxjtqwvpDLGM0VD43NF4rkaAhEN/rAG9x8uY1nJXroRZYpw4ovLty9cWdoeXLXx
+        fawkSol2rNxgQCFj1r+XYU97H+dzKKywYV/YcEAtEZBV1DQewYq1bVhOlLRhWclvsXRNi/TLPPsi8+eY
+        7wOkgh5oX1JYHvo3fF0I8Q0hxLcfn1fibNzXy8fxuGjJKh/TjsYjyJmTv0sIkSWE+KY5j+ZT9dNPMfnl
+        O6F1Lb/ZlfvOm0B3ORI85ae/sO18p7UHwZgOf0RlgjGNV54zJ89piiZnNIfmWnata3nman7jn4b/BBmg
+        O92UOU8VOnfv7YYU0xlHw2E8+thiy7l17bpxPnH9s6ykTXhDmvCGFMYTVIQnpApvWBNDsiZ8EUX4ZEUE
+        ZFUEY/rYqJGDh370xCpnnasLjoZDyP5x7ljnfPcPRjThD2vCF1bZ/pLVrnH+xSuvt4pX1rSKpa/vNbBR
+        28L9l217xcvFLUZr9n9d3GKJIAcciR/+bJUj+yd5DrOOaIydLylyiXymeRz/q48lgnJMubbynfnXcys+
+        Vk7JqeX4Czv/B6aehLUMqsMAAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="xtraTabPage3.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAADXRFWHRUaXRsZQBSZXN1bWU7
+        MNWvbwAAButJREFUWEetlwdQVFcUhrEkaqKJiSaxTCbGaBJ7ySSWWBY1RrGPIoJUkaYoIhaQpiKKwBJs
+        CHZFEFcQBbFFbFhANCo2EEEBWcrSdllgqX/m3PcWWBaXzUzezDdvYC7v/8655xV0AOgo+Z+Odhpgh0rm
+        fwhvebH2LejQCh2bQT/TOnZoFNh37hH2RD/ErqhkBEY+QMCZJAhFifA7nQjfU/fhE34PO8LuwvvkHWwL
+        TcDW47ex5dgteB65BffDN+F26Do2HYiHc0g8NgZfw/qgq3Dad4VCSIR1QpNAu91nk6HN0aCkQZ36hgYV
+        1uy+TCGdlF3QJNCeqtY2qLWw+nqOumasDrxIIZ3bEqD2dBCKktRCiKuig3CcPwr2c4bBdsZgxJzYoxbU
+        klqirgErhRcopItWAn4R99UquyI6iKANekiOWIH7oVaI9l8EHzsBXIzGI/VJkkqYkpq6+kbs/GIp5FN+
+        GDUKdKQha1nZmgWjWPi9UGuc89PHMkF/rNP/DVFCUwjXm6mEMWo5qnmsd56nkK7aCHy8/eQd1RbWN2DV
+        7GGIDTSE1dSB2LJsGqJ8LSDyNoa7yVhsX2XQGNQcBVHDYbk9mkK6tSVA+9PJ60SCWgt91y6Fs/5EFL+5
+        i4b006i+54nsM7awnT4Uj5MSVMIUNXWMKiXVdbDwOkshn/O3okaBzpuP3lJrIeFqOAWStFuofrAT8ngn
+        ZISZYvXsMU1BfFhlK5hsiaSQ7toIdPE4fEOthUTIFkfcDPNHxU03lF2wQozbVAQ626mFVSiU1ELOs9RT
+        RCFf6ujofKRJgPbnE9cD19VaSBe+czkGO23n4f6hVbi5YyY8FgzHjdizamGNVNWinGeJ22kK6cELtNMk
+        0NU5+Bq7qLKipMepWLFeiMFjl0B3rC7czObA1XQWxo8ch35DZsHc1hMJiSmNYYSMqCRqGItdTlHIV9oI
+        dFu/7yr7Y6ogI6cANk5+mKbvjjHTV8HFxghPQ60ZzjaGGD7RGqN07bHEwhVpmbksTKqkogZlPAs3hFHI
+        N3SXaRKgAfls7e7LKJFXswuEnIjBH4s9MNfCH7PNfPHjaAO8SnvL6D9iESbM9cC4Wa4YNsEWgUHhjYFE
+        qVxJNeavO0khvbQR6O4QeBESmQJFsmqMmWKO8TMdIJjvgimL3DFykjUC9oYjYG8YBo21wC/THDF0gg1+
+        GGmIAUNmsDCSZ5RzFJdXY55TKIX04V9IGgW+sBdegLikEgWlVQiLioerVzCMl7tDV88KP4+ejz4D9dBn
+        wAwMGKKH8YKlWGjoCCdnIY6Hx7EwJUWEjFBgruMJCunblgANSA96budIKvC+uBJ5JVUoKKuCREodUaBY
+        plqZSiAfRlAHGVIFCqUKzHY4TiHfaiPQ09rnPDILypFVKEdOES9SWoX8MpKhizYFFUmbgpRhhWXcmdaS
+        PDFr9TEK+Y5/JbcqQO8BEvja0jsaablSZOSXI7NAjixJk4hr8N9wDrqCDXsvYe2uOKwJiIW933ms8ImG
+        jXcUlnudgcXm0zD1iEA+SZdWMXk9+6MU0q8tAZrQXuZeUUh5V4qX76VIF8vwJr8cb5lIBXIklUyEZiSv
+        tJJVR51pHkaISwhuHTFj5REK6c9/E2gU6G3iGYnk10V4nFmMZ1mlSMuVIT1Phoy8cmzYcwlrA+PgIOQq
+        t/OJhrV3FCybVW7sFg6jTSeRW8zJEn/aHaaQAW0J0ID0NXIXIeFFPhLTCvHoTTHXjZwypIllSBeXs61h
+        HSmUI7uogm1PThEfxp+533HQmum2hyhkoFYCBi4RuPYkF7efi3H3VQGS0yV4/LYEz7LLWlQeCcutVLkI
+        Zh6nYOwWxsKyJU3QthHTrA9SyE/0rtEkwGbAMfASHPzjsNI3FrY7YmC17RwS0ySsG0/eleBljhSp76WN
+        HXmTR12Rs668K6jAu0JC3gj9furyAxQySJMAHexJaLJxv9W2iBSF8qvY3DMSt1/k4V5qIR6kF3HdyKJt
+        keIVieTK8Jpk8jiZTP7uoWA6Z+bLoWsZQiFD+O9CdQFegn0R0a1o6PjXim0RKbUksNRVhKv/vMeNFDHu
+        vKTZkOAhdeNtKZ5nl+EFL5KaK2smw909JEQILIIpYGhbAkoJGpTeBg5Ce5Iw2HgKcQ+ycOVRDuKfinH7
+        eT7XjdcSPMrghvRZFifCdUXGyYg56FaebL5f2YHWt0CTxEKnMIxeuB2/6u/EGAN/jDMKwO/GuzDRZA8m
+        me2DwDyIVShYFgzdZSEQWIRAYB6MyYz9mGS6HxNNmcD3H3wQfUCCFvfkn2A0wTREg/lKCGopMYxnOM8I
+        npH8mdbQQ0j5UapZgJdQ/gdMj2cSodbR/rWEvvXbgtZRR1XCiX8BCqSJUIVUr40AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="xtraTabPage5.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAAAFHRFWHRUaXRsZQBFZGl0TmFt
+        ZTtFZGl0OwRbSBMAAAjySURBVFhHxZZ7ONT5Hsc/nWp1lctyVKe99HSSg9wlGpfclUjrOmoVche5FclK
+        pK1UylNK7aa2m920EZWOe1HRRdpCkiwxi4xmzJgZfc7zGWbX6jnP4Z893+d5PTPz/c3v+35/P9/P5/P7
+        ASLC/5OPJv5qPpr4q/nTGBoaihQKhaUCgUAMfac5yXVE1BGJRKV8Pl98/cOHDyV/XuGPMVbovyEe+uYB
+        oG/uDwKB4EJC6tm3Vs7xaLkuDiN2ZLwVCoV5eiv9gBAIBLpFpbV1Fl/tQF3TzUhGdE03wzC+oEOY+E7c
+        AC2OiHN5PF7ZOq8knsW6OCRM7cOEAwMDZYi4mES4XK5e4e17deZOsahj6ot0TdvEB37HeJgJG9A12wwi
+        kcj+2fNX9xmrtqKbTzLHzj1BaGQTimWVtQ8HBwc9SIAMFBRVP125djtqG/sgh8Mp0zb2Bi2C4Q3ajOHP
+        CRug0A0ODiaezL7eZGgTiuHbj3R6b0nrY9iF454DZ17zeLxEEmKz2Xr5N+8+NXOIwWUWQdjb21tOUSAj
+        dBxDQ0N+moxNEzdAYRsYGMgP2Xa0W9/cH1P2n3m9L/1Cq8maaNwYkNzN5XLztRibxAbyCiufmtpHo8ma
+        KEzPzGl29Ezgm6yOxNhdmb+SEZFI5DFhA3TG/f395dYuO4RajE2Yk1tUf+7SzRckssI6SMhms8spAcnA
+        1etl9cb2kahnHoBLjb5GvZX+yFgVgSvstmLinpOv+Xx+flM2A+q+t4bC6O3QvNkdmv3cSWYSAPxtFJNG
+        5oHC71FSUfPIyDYMNVdsFIf2ZfPrKsZqEvIXG+LxeEwykJtXWk95om64AeOTjrV2dHRUJu8/02pkF47L
+        zH2F7969K6cN7U05AtkhiVC/3kkiPvkR0yGxnumIj5iOiQAwZcQIAIfDOZh66FwrY3UErvdLYbe3t1e2
+        tbXdWeUWxzewCsGdycdb6T/d3d36P10rrjeyDUd1A0/s6uqqIGMNja+qDW3DUGOFFxbeqnhMyXq7pg1u
+        P/iVlieRKRX2lrta4oJw6G0jNod7YZm9RRIATBUbeP/+fdl6/z1sA+tQXGYZggaWwUjCJGRoG46OHtFs
+        OiIykJN7u365zRZUW8bEnp6eip6eHmkWi1Wx3DoU1Zd74vnLBfUUqVEh/yTFKWB3Q4QvDnU04PtTKThQ
+        fBHvOdlgHmP5bhAKhWa0AO1A3WgDWjoEcx3cItlrmTFsR88dXBKjY3nR8LK6s7PT4tKVonoD6xDUZHgj
+        hZ/D4Xg++6WxWs8iEFX03PFOVW1NX1+f/oi4lK37oeTkjGLs6OVhf1YKvg1j4m/fHcX6xGjMWvQlUm37
+        Z2X/3KBvGYiqy5hYUlb1kMVinSauFZQ8oUhoGftgxokLDSwWK+jijzeeUQkuswzGncmZb1paWu7EJ2e+
+        0TTyQgPzTfzu7u6Kly9fLgCAad8EeqbEpd3A131CzK9uxaqjx7DzwC68qrwIsz/7DJMVFPZCX1/fqaj4
+        jA4SMbcP5FJYuVzuPD6fr0yRMV4VJtJZ6Y9BW/d0dHV1fXc+p/CZpvEmSjiRnnkg6q4crgZlHReMiU97
+        09vbexkAppfv1tzTcd0dBfwOzK1oxqxrT7CgshnTrJ3x5Lz5GD1beh8AzIR3796dsnAI4qjouWFo1Lft
+        /f39WSq6rkCw2ezrGwMSupbouKL56kAOGfjhYl49iXn6xLI2hyS+VdZxRg1DD1H0jgNvOjs7K5ubmzcW
+        Jy5Nbb/mgshvxqEXEVh96wD+XNqIzgFZyHDYjaaK6vsBYJY4CQUCwQkqHdotJaNAIPAbLk4APp8fRT2A
+        rlFp8vn8k9T5KEr0m+6jSiC6u7sLmpqaNt2MU/u2LXcdfhhoxKG6EOSXmyOnLhbjYrahvs0OlFmwJg0A
+        pCk5xXkytjONhUbdUX2oS9eDJ4d1QVhtC8JqGxDetQRhpaWkzKicZhfE/Gtf6yUHRO5zFP6ShPxiY+yv
+        jcJ78QuxOOwLtNJSPQgAcyTiBtKL/3fLpPE4TQceHtCBh/u0YbDEDAZLTGCw2EQiTovNyYtYsr/l3Cr8
+        8L4eeVXeyMlfjv3V4Vgd8xkWBS7AIzbyhwBAlipD0gml5G3GZ6B2rxbUpGrBgxRN4N4wFDNKXOZK6OK0
+        V9/b4Af2Exwo8UTOj1rYVxGEleHzscB3HqZZyKYDgBxVhkScGX4WpOStxmfgfrIG3EtaCtWJS+mnpMHQ
+        TuRyAhcdbDppiUO9Nci55Yb959Wwt8QPy4KUMN9LCfcZSx8BAPnR4jWxX0BKfCKYKi8Zn4GqBDW4u1N1
+        rLj8Jd+FhxoyTFH0WzX2X3fCntPK2FPkhcU+injVUwGTjWYfBQAFKkuJ+L2oBSAmYj4cNpg5PgOVsSpj
+        xT8957Uw/fkhBgo6K7E3dw2yji/EngIm3toojz85y+MuvZkZAKA4Ij6Z7q/aMheqQpXE3A1Rgv26M8Zn
+        oCxyicQAZbvcMRfd9LsHfVDYUYK9F22Qlb4Au/NcsNBTDnPWymK89vRjAKAEADMk4ncCFIGoDFCAO34K
+        8CxKAfYunT4+A5LHKTWPSLOF9lcDrZBGz1lL7No7F1lX1mC+qzResJfB7RrTjgPA3NHi5T7yIKHMRx7q
+        wuShLV4OklWlJmSAMl7huKvB5funU5H1ogbbdyti12VbvOY4G3+wk8ZoValMAJgnbrEj4qVeskCUfC0L
+        Jetl4XGQDLRumwMtMXMgackn4zZAZz9TTvFz1e0eLgN9bY3YXnYa72ZE4vlgB8x0UMNIFakTADB/tHix
+        pwwUM4f5N1MWHvrNgVcRs8S0hM2CROXxGaDd09uLnIahU0LQliTsun8ZKw6H4SkmAw9aqGCwxt9J/B+j
+        xW+7SYMY12FqvWfBq5AZYpqCp4v5ZvHUcRug8CvpmW14HhybjTaWX6GdmgovSmtenuOXsq4jCUfiZHRS
+        kctsEOM8zAOvmdDkPw0aCT+p35mIAcp+hUXqVig3V7VxtuznqZOnztAdCbnMSJMR7zzhn1NhInwkOJZR
+        FUA7pLqmJPuUHj4jPUHycjlp56IpMFH+A14pPb1hJpUqAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
